--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -9,6 +9,11 @@ body {
   background-attachment: fixed; 
   font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
+  font-family: 'Poppins', 'Vazirmatn', sans-serif;
+  color: #1a1a1a;
+  background-color: #f9fafb;
+
+
 }
 
 
